--- a/drivercar/app/src/main/res/layout/fragment_driver_home.xml
+++ b/drivercar/app/src/main/res/layout/fragment_driver_home.xml
@@ -61,50 +61,39 @@
         android:background="@drawable/shape_rect02"
         android:padding="10dp">
 
-
-        <!--Tabs Products, Order -->
-        <LinearLayout
-            android:id="@+id/ll_dieukhien"
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/TabTab"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
-
-            android:layout_centerHorizontal="true"
-
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
             android:background="@drawable/shape_rect03"
-            android:gravity="center"
-            android:orientation="horizontal">
+            app:tabTextColor="@color/white">
 
-
-            <TextView
-                android:id="@+id/tabLoadingTv"
-                android:layout_width="120dp"
-                android:layout_height="match_parent"
-                android:background="@drawable/shape_rect04"
-                android:gravity="center"
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/TabLoading"
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_circle03"
                 android:text="Đang thực hiện"
-                android:textColor="@color/black"
-                android:textSize="15dp" />
 
-            <TextView
-                android:id="@+id/tabCompleTv"
-                android:layout_width="120dp"
-                android:layout_height="match_parent"
-                android:background="@drawable/shape_rect03"
-                android:gravity="center"
-                android:text="Đã hoàn thành"
-                android:textColor="@color/black"
-                android:textSize="15dp" />
+                />
 
-            <TextView
-                android:id="@+id/tabMySefTv"
-                android:layout_width="120dp"
-                android:layout_height="match_parent"
-                android:background="@drawable/shape_rect03"
-                android:gravity="center"
-                android:text="Của tôi"
-                android:textColor="@color/black"
-                android:textSize="15dp" />
-        </LinearLayout>
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/TagComple"
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:text="Đã hoàn thành" />
+
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/TabMyseft"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Của tôi" />
+
+
+        </com.google.android.material.tabs.TabLayout>
+
+
     </RelativeLayout>
 
     <RelativeLayout
@@ -113,54 +102,52 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbarRl"
         >
-        <!--SearchView-->
-
-
-        <TextView
-            android:id="@+id/filterProductTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_marginStart="5dp"
-            android:layout_marginBottom="5dp"
-            android:text="Hiển thị tất cả"
-            android:textColor="@color/black" />
-
-        <Button
-            android:id="@+id/AddDriverBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_alignParentEnd="true"
-            android:layout_toLeftOf="@+id/filterProductTv"
-            android:backgroundTint="@color/green"
-            android:text="Thêm xe" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/Recycle_menu"
+        <!--ViewPager-->
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/AddDriverBtn"
-            android:layout_marginStart="5dp"
-            android:layout_marginBottom="5dp"
-            tools:listitem="@layout/row_product_driver" />
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/Recycle_menu2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/AddDriverBtn"
-            android:layout_marginStart="5dp"
-            android:layout_marginBottom="5dp"
-            tools:listitem="@layout/row_product_booking" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbarRl"
+            tools:ignore="NotSibling"
+            tools:layout_editor_absoluteX="8dp" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/Recycle_menu3"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/AddDriverBtn"
-            android:layout_marginStart="5dp"
-            android:layout_marginBottom="5dp"
-            tools:listitem="" />
+
+
+<!--        <Button-->
+<!--            android:id="@+id/AddDriverBtn"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+
+<!--            android:layout_alignParentEnd="true"-->
+<!--            android:layout_toLeftOf="@+id/filterProductTv"-->
+<!--            android:backgroundTint="@color/green"-->
+<!--            android:text="Thêm xe" />-->
+
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/Recycle_menu"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_below="@+id/AddDriverBtn"-->
+<!--            android:layout_marginStart="5dp"-->
+<!--            android:layout_marginBottom="5dp"-->
+<!--            tools:listitem="@layout/row_product_driver" />-->
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/Recycle_menu2"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_below="@+id/AddDriverBtn"-->
+<!--            android:layout_marginStart="5dp"-->
+<!--            android:layout_marginBottom="5dp"-->
+<!--            tools:listitem="@layout/row_product_booking" />-->
+
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/Recycle_menu3"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_below="@+id/AddDriverBtn"-->
+<!--            android:layout_marginStart="5dp"-->
+<!--            android:layout_marginBottom="5dp"-->
+<!--            tools:listitem="" />-->
 
     </RelativeLayout>
 
