--- a/drivercar/app/src/main/res/layout/fragment_driver_pendingorders.xml
+++ b/drivercar/app/src/main/res/layout/fragment_driver_pendingorders.xml
@@ -59,41 +59,30 @@
         android:background="@drawable/shape_rect02"
         android:padding="10dp">
 
-
-        <!--Tabs Products, Order -->
-        <LinearLayout
-            android:id="@+id/ll_dieukhien"
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/TabTab"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
-
-            android:layout_centerHorizontal="true"
-
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="90dp"
             android:background="@drawable/shape_rect03"
-            android:gravity="center"
-            android:orientation="horizontal">
+            app:tabTextColor="@color/white">
 
-
-
-
-            <TextView
-                android:id="@+id/tabNeedCarTv"
-                android:layout_width="160dp"
-                android:layout_height="match_parent"
-                android:background="@drawable/shape_rect04"
-                android:gravity="center"
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/TabApCars"
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_circle03"
                 android:text="Đơn cần xe"
-                android:textColor="@color/black"
-                android:textSize="20dp" />
+                />
 
-            <TextView
-                android:id="@+id/tabQuotedTv"
-                android:layout_width="160dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="Đã báo giá"
-                android:textColor="@color/black"
-                android:textSize="20dp" />
-        </LinearLayout>
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/TabQuoted"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Đã báo giá" />
+
+
+        </com.google.android.material.tabs.TabLayout>
     </RelativeLayout>
 
     <RelativeLayout
@@ -102,13 +91,22 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbarRl"
         >
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/Recycle_menu"
+        <!--ViewPager-->
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="5dp"
-            android:layout_marginBottom="5dp"
-            tools:listitem="@layout/row_product_booking" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbarRl"
+            tools:ignore="NotSibling"
+            tools:layout_editor_absoluteX="8dp" />
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/Recycle_menu"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_marginStart="5dp"-->
+<!--            android:layout_marginBottom="5dp"-->
+<!--            tools:listitem="@layout/row_product_booking" />-->
+
     </RelativeLayout>
 
 </RelativeLayout>
