--- a/bookingcar/app/src/main/res/layout/activity_cus_info_detail.xml
+++ b/bookingcar/app/src/main/res/layout/activity_cus_info_detail.xml
@@ -33,7 +33,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
-                    android:text="Thông tin đơn hàng"
+                    android:text="Sửa thông tin đơn hàng"
                     android:textStyle="bold"
                     android:textSize="20sp"
                     android:layout_gravity="center"
@@ -361,7 +361,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:text="Đăng "
+                android:text="Sửa "
                 android:layout_gravity="center"
                 android:backgroundTint="@color/green"></Button>
         </LinearLayout>
