--- a/drivercar/app/src/main/res/layout/activity_driver_phone.xml
+++ b/drivercar/app/src/main/res/layout/activity_driver_phone.xml
@@ -27,5 +27,13 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_phone"
             android:background="@null"/>
+<!--        <Button-->
+<!--            android:id="@+id/receorder"-->
+<!--            android:layout_marginTop="50dp"-->
+<!--            android:layout_width="150dp"-->
+<!--            android:layout_height="100dp"-->
+<!--            android:backgroundTint="@color/orange"-->
+<!--            android:text="Nhận đơn"-->
+<!--            android:textSize="30dp"/>-->
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
