--- a/drivercar/app/src/main/res/layout/fragment_my_seft.xml
+++ b/drivercar/app/src/main/res/layout/fragment_my_seft.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".driverCar_fagment.MySeftFragment">
+    tools:context=".driverCarPanel.MySeftFragment">
 
     <RelativeLayout
         android:id="@+id/productRL"
