--- a/bookingcar/app/src/main/res/layout/activity_cus_info_detail.xml
+++ b/bookingcar/app/src/main/res/layout/activity_cus_info_detail.xml
@@ -9,11 +9,13 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         android:orientation="vertical"
         >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/bg_states"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -53,7 +55,7 @@
                     android:id="@+id/gpsBtn"
                     android:layout_width="30sp"
                     android:layout_height="30sp"
-                    android:layout_marginLeft="30sp"
+
                     android:src="@drawable/ic_location"
                     android:background="@null"/>
 
