--- a/drivercar/app/src/main/res/layout/fragment_driver_pendingorders.xml
+++ b/drivercar/app/src/main/res/layout/fragment_driver_pendingorders.xml
@@ -72,8 +72,7 @@
                 android:layout_width="140dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/shape_circle03"
-                android:text="Đơn cần xe"
-                />
+                android:text="Đơn cần xe" />
 
             <com.google.android.material.tabs.TabItem
                 android:id="@+id/TabQuoted"
@@ -83,6 +82,23 @@
 
 
         </com.google.android.material.tabs.TabLayout>
+        <TextView
+            android:id="@+id/khancap"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:text="Khẩn cấp"
+            android:textColor="@color/white"
+            android:textSize="16dp" />
+
+        <ImageButton
+            android:id="@+id/call_urgent_Btn"
+            android:layout_width="30sp"
+            android:layout_height="30sp"
+            android:layout_below="@+id/khancap"
+            android:layout_alignParentEnd="true"
+            android:background="@null"
+            android:src="@drawable/ic_emergency_call" />
     </RelativeLayout>
 
     <RelativeLayout
